--- a/Fragments/settings.gradle
+++ b/Fragments/settings.gradle
@@ -1,1 +1,1 @@
-include ':Static', ':Dynamic', ':Details', ':List', ':LifeCycle'
+include ':Static', ':Dynamic', ':Details', ':List', ':LifeCycle', ':ControlButton'
