--- a/Authentication/app/build.gradle
+++ b/Authentication/app/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.android.support.constraint:constraint-layout:+'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
