--- a/Fragments/settings.gradle
+++ b/Fragments/settings.gradle
@@ -1,1 +1,1 @@
-include ':Static', ':Dynamic', ':Details', ':List', ':LifeCycle', ':ControlButton', ':Communications', ':Dynamic-AddReplace'
+include ':Static', ':Dynamic-HideShow', ':Details', ':List', ':LifeCycle', ':ControlButton', ':Communications', ':Dynamic-AddReplace'
