Upgrading Services examples

--- a/Services/settings.gradle
+++ b/Services/settings.gradle
@@ -1,1 +1,1 @@
-include ':Started', ':BoundChronometer', ':IntentService', ':MemoryService', ':Donwload'
+include ':Started', ':BoundChronometer', ':IntentService', ':StartedMemoryService', ':Download'
