--- a/Activities/settings.gradle
+++ b/Activities/settings.gradle
@@ -1,1 +1,1 @@
-include ':LifeCycle', ':SavingState', ':CallingActivity'
+include ':LifeCycle', ':SavingState', ':CallingActivity', ':StartActivity'
