--- a/BroadcastReceiver/SMS-Dynamic/src/main/AndroidManifest.xml
+++ b/BroadcastReceiver/SMS-Dynamic/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="co.edu.udea.compumovil.sms_context">
 
     <!-- Permissions needed to receive sms -->
-    <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <!-- Permissions needed to read sms inbox -->
-    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
         android:allowBackup="true"
