--- a/FriendlyChat/android-start/app/src/main/AndroidManifest.xml
+++ b/FriendlyChat/android-start/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.google.firebase.codelab.friendlychat">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +20,22 @@
         </activity>
 
         <activity android:name=".SignInActivity" />
+
+        <service
+            android:name="MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".MyFirebaseInstanceIdService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
